Revision history for PDL-DSP-Windows

{{$NEXT}}

0.008005  2021-10-29 17:31:53 BST (TRIAL RELEASE)

Fixes:
  * Fixed scallop_loss tests in older versions of PDL

0.008004  2021-10-28 23:19:18 BST (TRIAL RELEASE)

Fixes:
  * Fixed a check that would sometimes fail in Windows machines
  * Fixed a long-standing issue with calculation of a window's
    scalloping loss.

0.008003  2021-10-27 17:52:36 BST (TRIAL RELEASE)

Fixes:
  * Fix a wrong dependency introduced in namespace test

0.008002  2021-10-26 21:36:20 BST (TRIAL RELEASE)

Changes:
  * Drop dependency on namespace::clean

0.008001  2021-10-18 19:51:22 BST (TRIAL RELEASE)

Changes:
  * Remove package variables deprecated in 0.007001
  * Tweaked distribution packaging, removing some authoring
    files from the distributed tarball

0.008     2019-12-09 19:06:23 GMT

Fixes:
  * Remove remaining uses of unsupported windows for tests.

0.007005  2019-12-09 12:12:07 GMT

Fixes:
  * Do not run tests on unsupported windows

0.007004  2019-12-08 21:11:30 GMT

Changes:
  * Minor re-phrasing of deprecation warnings.
  * Expand test coverage

0.007003  2019-11-04 22:46:43 GMT (TRIAL RELEASE)

Fixes:
  * Fixed check on exception test.

0.007002  2019-11-04 22:36:26 GMT (TRIAL RELEASE)

Fixes:
  * Apply fix for chebyshev window to PDL > 2.007
  * Avoid using PDL::LiteF in tests, since this module started being
    indexed by CPAN only with PDL 2.012.
  * Add Try::Tiny to missing test dependencies.
  * Re-instate support for Perl < 5.12 by removing use of non-destructive
    substitutions. Minimum supported version of Perl is now 5.10.

Changes:
  * Avoid using PDL::Lite and PDL::LiteF to support older PDL releases

0.007001  2019-11-01 23:33:11 GMT (TRIAL RELEASE)

Deprecated:
  * Deprecate undocumented package variables: trying to read or write from
    them will now trigger a warning

Fixes:
  * Fix typos in plotted strings
  * Fixed an error triggered when running $win->get('modfreqs')